<resources>
    <!--<string name="app_name">OneRing</string>-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="Log">Gallery</string>
    <string name="Location">MyLocation</string>
    <string name="send">Send to primary contact</string>
    <string name="share">Share</string>
    <string name="Filter">Slideshow</string>
    <string name="twitter_account">saffih</string>
    <string name="title_activity_location">My location</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_contacts">Contacts</string>

    <string name="pref_title_allowed_whitelist">Filter unlisted queries</string>
    <string name="pref_description_allowed_whitelist">List of contacts that are allowed to query the location by sms</string>
    <string name="pref_allow_default_value">Please add number</string>
    <string name="pref_description_openmap_switch">Open map and location</string>
    <string name="pref_title_openmap_switch">Open map upon a request</string>
    <string name="pref_header_options">Options</string>
    <string name="pref_description_reply_each_request_with_status_switch">Reply each request with current status</string>
    <string name="pref_title_reply_each_request_with_status_switch">Reply with status</string>
    <string name="pref_description_make_effort_to_detect_spoofed_sms_switch">Best effort - filter spoofed requests, not supported yet</string>
    <string name="pref_title_make_effort_to_detect_spoofed_sms_switch">Match prefix for provider and owner number </string>
    <string name="pref_description_foreground_service_and_notification_switch">Start service in the foreground (thus having persistent notification)</string>
    <string name="pref_title_foreground_service_and_notification_switch"><![CDATA[Foreground service & Notification]]></string>
    <string name="pref_provider_prefix_default_value">054</string>
    <string name="pref_description_operator_prefix">Operator prefix for blocking spoofed sms trigger</string>
    <string name="pref_title_operator_prefix">Provider prefix</string>

</resources>
