<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="openmap_switch"
        android:summary="@string/pref_description_openmap_switch"
        android:title="@string/pref_title_openmap_switch" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="reply_each_request_with_status_switch"
        android:summary="@string/pref_description_reply_each_request_with_status_switch"
        android:title="@string/pref_title_reply_each_request_with_status_switch" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="make_effort_to_detect_spoofed_sms_switch"
        android:summary="@string/pref_description_make_effort_to_detect_spoofed_sms_switch"
        android:title="@string/pref_title_make_effort_to_detect_spoofed_sms_switch" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="foreground_service_and_notification_switch"
        android:summary="@string/pref_description_foreground_service_and_notification_switch"
        android:title="@string/pref_title_foreground_service_and_notification_switch" />

</PreferenceScreen>
