<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_location"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/Location" />
        <!--<item-->
        <!--android:id="@+id/nav_log"-->
        <!--android:icon="@android:drawable/ic_menu_report_image"-->
        <!--android:title="@string/Log" />-->
        <!--<item-->
        <!--android:id="@+id/nav_filter"-->
        <!--android:icon="@android:drawable/ic_lock_lock"-->
        <!--android:title="@string/Filter" />-->
    </group>

    <item android:title="@string/communicate">
        <menu>
            <!--<item-->
            <!--android:id="@+id/nav_share"-->
            <!--android:icon="@drawable/ic_menu_share"-->
            <!--android:title="@string/share" />-->
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send"
                tools:ignore="HardcodedText" />
        </menu>
    </item>

</menu>
